[package]
name = "risk-manager"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alpaca = {git = "ssh://git@github.com/Overmuse/alpaca.git", tag = "v0.10.1"}
anyhow = "1.0"
chrono = "0.4"
config = "0.11"
dotenv = "0.15"
kafka-settings = {git = "ssh://git@github.com/Overmuse/kafka-settings.git", tag = "v0.3.3"}
mobc = "0.7"
mobc-redis = "0.7"
polygon = { git = "ssh://git@github.com/Overmuse/polygon", tag = "v0.11.2", default-features = false, features = ["ws"] }
rdkafka = { version = "0.26", features = ["ssl-vendored"] }
redis = { version = "0.19.0", features = ["aio", "tokio-comp"] }
rust_decimal = "1.14"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = "0.2"
trading-base = {git = "ssh://git@github.com/Overmuse/trading-base.git", tag = "v0.4.0" }
uuid = "0.8"

[dev-dependencies]
mockito = "0.30"
