[package]
name = "risk-manager"
version = "0.4.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alpaca = {git = "ssh://git@github.com/Overmuse/alpaca.git", tag = "v0.11.1"}
anyhow = "1.0"
chrono = "0.4"
config = "0.11"
dotenv = "0.15"
kafka-settings = {git = "ssh://git@github.com/Overmuse/kafka-settings.git", tag = "v0.3.3"}
num-traits = "0.2"
rdkafka = { version = "0.26", features = ["ssl-vendored"] }
redis = { version = "0.19", features = ["aio", "tokio-comp"] }
reqwest = { version = "0.11", features = ["blocking"] }
rest-client = {git = "ssh://git@github.com/Overmuse/rest-client.git", tag = "v0.1.2"}
rust_decimal = "1.17"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = "0.2"
trading-base = {git = "ssh://git@github.com/Overmuse/trading-base.git", tag = "v0.5.1" }
uuid = "0.8"

[dev-dependencies]
mockito = "0.30"
